--- a/trunk/README
+++ b/trunk/README
@@ -1,41 +1,48 @@
-There are many libraries to parse XML text files, W3C define two API SAX and
-DOM for this task, we can recognize tag, attributes, comments etc through these
-API.
+CocoXml is inspired by Coco/R and modified from it.
 
-If we define a XML language, the semantic of tags, attributes shall be assigned
-with the structure of various tags, attributes. So how can we parse this
-structures?
+Coco/R is released under GPLv2 and written by Hanspeter Moessenboeck,
+University of Linz. Its homepage is http://www.ssw.uni-linz.act.at/coco/ .
 
-There is no library for this work, we have to check the tag, attribute
-relationship manually. For the complex XML language, such as XSLT, this task
-is complex too.
+CocoXml is released under GPLv2 too.
 
-So I'm trying to use compilation technical which can deal which complex syntax
-structures with semantic actions. SAX XML API is used as lexical analysis tool
-to generate tokens such as TAG, END_TAG, TEXT, and so on. Then CocoXml is
-used to do the syntax analysis and semantic actions. The tag, attribute
-structure is described by EBNF, semantic actions are attached within EBNF too.
-So we can implement strict, complex XML language easily and convert it to
-the required data structure without DOM data structure is generated.
+Coco/R can read an atg file and frame files, then generate scanner and parser
+for user. Different versions are implemented for different languages, such as
+C#, Java and CPP and so on.
 
-The user of CocoXml have to compose a Name.atg to describe the required tags,
-attributes, and then write EBNF to define the tag, attribute structure and
-semantic actions. If Name.atg is ready, run "CocoXml Name.atg" to generate
-Parser.cs/Parser.java and XmlScanner.cs/XmlScanner.java. For the detail of
-usage, see "USAGE" and samples.
+Firstly, I modify Coco/R so it can accept a different atg. This new atg can be
+used to parse the tag/attribute structure base on the result of SAX parser,
+just like XCC does. For the detail of XCC, please access:
+ftp://plasma-gate.weizmann.ac.il/pub/xcc/. CocoXml use the EBNF to describe the
+syntax of tags, attributes and other XML elements. It is a strict way and can
+parse complex XML structure easily.
 
-CocoXml is modified from Coco/R which contain CocoSourcesCS.zip and
-CocoSourcesJava.zip. These two packages are written by Hanspeter Moessenboeck,
-University of Linz. Their homepage is http://www.ssw.uni-linz.act.at/coco/.
+Then CocoXml-0.9.0.tar.gz is released.
 
-Both CocoSourcesCS.zip and CocoSourcesJava.zip are released under GPLv2, so
-my modification CocoXml is related under GPLv2 too. For the detail of GPLv2,
-see COPYING please.
- 
-The homepage of CocoXml is http://code.google.com/p/cocoxml/. The source of
-CocoXml can be checkout with the following command:
+After that, I realized that if I provide CocoXml as the Coco/R way, the core
+algorithm has to be implemented in all supported languages. This is not
+necessitation. And I also need a stronger implement of Coco/R in C, so I can
+use it to generate various parser in C.
 
+So I decide to re-implement Coco/R in pure-C and split the output scheme from
+algorithm completely. And when I want to support a new programming language,
+define a new output scheme is enough.
+
+Another advantage of C implemented Coco/R is there are least dependencies, so
+the user can install it easily. And linux distribution can distribute it easily
+too.
+
+Now the new implemented Coco(in c) and CocoXml are combined into one binary.
+If the extension of the input is .atg, it is treated as a syntax of the
+original Coco. If the extension of the input is .xatg, it is treated as a
+syntax of CocoXml.
+
+Some more improvements are introduced too. For the details, please refer to
+the homepage of CocoXml: http://code.google.com/p/cocoxml.
+
+The source of CocoXml can be checkout with the following command:
 svn checkout http://cocoxml.googlecode.com/svn/trunk cocoxml-read-only.
 
-I shall commit the source of Coco/R firstly to show the difference from Coco/R
-to CocoXml. :)
+The referenced Coco/R code are committed into svn too, so my modifications can
+be show easily. :)
+
+Charles Wang <charlesw123456@gmail.com>
