--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -13,6 +13,16 @@
   * Output scheme 'dump', 'c', 'cxml' are supported now.
   * ebuild is added for the gentoo user.
 
+* 0.9.2:
+  * Combine the features provided by 'CocoInit' into 'Coco'. So 'CocoInit' is removed.
+  * Implement some applications:
+    * CExpr: A demo for c-style expression, can be used like an integer calculator.
+    * Json: A Json parser.
+    * Kconfig: Can be used to parse kernel Kconfig files and .config files. Can be used as a software configuration method.
+    * patch: A unified diff parser, store all patch informations into data structure.
+    * pgn: A parser of chess pgn files. The output is the board of all steps.
+    * rss: A XML parser of RSS.
+
 * Planning:
   * Add spec for rpm user and the related files for deb user.
   * Add more output schemes for different languages, such as 'csharp', 'java', csharpxml' and so on.
